# protein-affinity-gpu

./: .gitignore  README.md  pyproject.toml  update_pkg.sh
.github/workflows/: ci.yml
af_design/: HANDOFF_big_tests.md  HANDOFF_bsa_support.md  extract_interface_hotspots.py  modal_afdesign_ba_val.py  plot_afdesign.py  plot_afdesign_compare.py  plot_afdesign_metric_traces.py  plot_afdesign_rmsd.py  plot_afdesign_traj.py  plot_afdesign_trajectory.py
benchmarks/: __init__.py  benchmark.py  benchmark_experimental.py  check_soft_sasa.py  compare.py  modal_afdesign_ba_val.py  modal_benchmark.py  plot_results.py  profile_sasa.py  run.py  run_kahraman_compare.sh  sasa_benchmark.py  sasa_benchmark_colab.ipynb
benchmarks/datasets/: kahraman_2013_t3.tsv
benchmarks/datasets/kastritis_81/: README.md  manifest.csv
benchmarks/datasets/vreven_bm55/: README.md  manifest.csv  manifest_affinity_only.csv  manifest_boltz.csv  manifest_with_dg.csv
benchmarks/sasa/: __init__.py  profile_sasa.py  sasa_benchmark.py
benchmarks/scripts/boltz_pipeline/: 01_prep_kastritis.py  01_prep_vreven.py  03_build_boltz_yaml.py  04_modal_boltz_predict.py  05_mmalign_tm.py  05b_prodigy_on_boltz.py  06_plot_boltz_eval.py  README.md  dataset_registry.py  select_best_sample.py
benchmarks/scripts/pae_calibration/: add_pae_features_pb.py  augmented_refit.py  build_unified_dataset.py  diagnostic_refit.py  entropy_surrogate.py  interaction_ablation.py  interaction_refit.py  model_elasticnet_prior.py  model_prodigy_cad_hybrid.py  model_xgboost_residual.py  plddt_nis.py  quick_pae_calib.py  score_cadscorelt_binder_uniform.py  score_cadscorelt_complex.py  score_cadscorelt_proteinbase.py  stratify_pae_calib.py  threshold_pae_calib.py  union_refit.py
docs/: AFFINITY_CALIBRATION_NOTES.md  AF_DESIGN.md  BOLTZ_PIPELINE.md  EXPERIMENTAL.md  INDEX.md  PAE.md  TINYGRAD_SASA_OPTIMIZATION.md
src/protein_affinity_gpu/: __init__.py  af_design.py  contacts.py  contacts_pae.py  contacts_soft.py  cpu.py  experimental.py  jax.py  logging_utils.py  predict.py  results.py  sasa.py  sasa_experimental.py  sasa_soft.py  scoring.py  scoring_soft.py  structure.py  tinygrad.py
tests/: conftest.py  test_af_design_bsa.py  test_af_design_soft.py  test_benchmark_smoke.py  test_bucketed_sasa.py  test_compare_cli.py  test_cpu_selection.py  test_imports.py  test_plot_results.py  test_regression.py  test_residue_library.py  test_resources.py  test_results.py  test_sasa_benchmark.py  test_structure.py  test_tinygrad_smoke.py
(+18 files in other folders)
